Insert a fake key to make +k channels work on some servers

BUG:98207

svn path=/trunk/kdeextragear-2/konversation/; revision=402715